# cohort-8

assignments/6-wallet/: README.md
assignments/6-wallet/wallet-cli/: Cargo.toml
assignments/6-wallet/wallet-core/: Cargo.toml  wordList.txt
assignments/6-wallet/wallet-core/src/: entropy.rs  mnemonic.rs  seed.rs  wordlist.rs
assignments/6-wallet/wallet-core/src/ethereum/: private_key.rs  transaction.rs
assignments/wallet/wallet-cli/src/: main.rs
assignments/wallet/wallet-core/src/: lib.rs
assignments/wallet/wallet-core/src/ethereum/: address.rs  mod.rs  network.rs  public_key.rs
